# hello-world

./: .gitignore  .gitmodules  README.md  example.js
assemblyscript-example/: package-lock.json
d2l/: n.ipynb  n.py  perceptron.ipynb  (+2 more)
openai-demo/: pyproject.toml
openai-demo/src/openai_demo/: __init__.py
py-example/: a.txt  app.py  app的副本.py  chinese_money_to_number.py  concurrency-future.py  context-var.py  converter.py  converter的副本.py  corrector.py  descriptor.py  document-1.xml  document.xml  example.json  example.py  extracttext.py  font-replacement.json  kwargs.py  nth_replace.py  office_service.py  pyproject.toml  pythonTest2.py  regexp.py  script.py  split_pdf.py
py-example/asyncio/: task_group.py  test.py
py-example/celery/: app.py  task.py
py-example/files/: eb3ba311-bdb8-401c-a782-bf3687827408.docx
py-example/office-protected/: app.py  b.doc  b.docx  b.pptx  b.xlsx  converter.py  main.py
py-example/office-protected/files/: a.doc  a.docx  a.ppt  a.xls  a.xlsx  b.ppt  b.xls
py-example/open-pdf/: executor.py  openpdf.py  timing.py  timing2.py
py-example/pymupdf/: pdf2image.py  rawdict.py  rawjson.json
rust-example/: Cargo.toml
rust-example/add_one/src/: lib.rs
rust-example/adder/src/: main.rs
rust-example/blog/src/: lib.rs  main.rs
rust-example/example/: Cargo.toml
rust-example/example/src/: garden.rs  main.rs
rust-example/gui/src/: lib.rs  main.rs
rust-example/minigrep/src/: lib.rs  main.rs
rust-example/restaurant/src/: lib.rs
rust-example/src/: hello.rs  lib.rs  main.rs
rust-example/src/garden/: mod.rs  vegetables.rs
(+2264 files in other folders)
