[project]
name = "openai-demo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "星星", email = "luoxinzheng@fagougou.com"},
]
dependencies = [
    "openai[socks]>=1.16.2",
    "httpx[socks]>=0.27.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
