[project]
name = "py-example"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "星星", email = "luoxinzheng@fagougou.com"},
]
dependencies = [
    "pymupdf>=1.25.1",
    "celery[redis]>=5.4.0",
    "flask>=3.1.0",
    "flower>=2.0.1",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
