[workspace]
members = [
    'example',
    'adder',
    'add_one',
    'restaurant',
    'minigrep',
    'gui',
    'blog'
]

[workspace.package]
authors = ["luoxinzheng <luoxinzheng@fagougou.com>"]
version = "0.1.0"
edition = "2021"

# primary root package
[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
